<resources>
    <string name="app_name">FurnKart App</string>
    <string name="et_email_login">Email</string>
    <string name="et_password_login">Password</string>
    <string name="forgot_password_login">Forgot your password?</string>
    <string name="tv_login">Login</string>
    <string name="social">social</string>
    <string name="with"><b>with</b></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_string">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="signup">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="dob">Date of birth</string>
    <string name="already">Already have an account? Sign In</string>

</resources>