<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="#f2f2f2">


    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_black"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12">

    </TextView>

    <LinearLayout
        android:id="@+id/ll_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_signup"
        android:layout_marginTop="10dp"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="180dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextround"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:includeFontPadding="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#f2f2f2"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </LinearLayout>

            <View
                android:id="@+id/view_email_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view_email_signup"
                android:layout_marginLeft="70dp"
                android:background="@color/white"
                android:backgroundTint="#f2f2f2"
                android:fontFamily="@font/avenir_std"
                android:includeFontPadding="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/et_email_login"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#8c8c8c" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="180dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextround"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:includeFontPadding="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingBottom="2dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#f2f2f2"
                    android:inputType="textPassword"
                    android:drawableRight="@drawable/ic_baseline_visibility_off_24"
                    android:drawableTint="#4a4a4a"
                    android:maxLines="1"
                    />

            </LinearLayout>

            <View
                android:id="@+id/view_password_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view_password_signup"
                android:layout_marginLeft="70dp"
                android:background="@color/white"
                android:backgroundTint="#f2f2f2"
                android:fontFamily="@font/avenir_std"
                android:includeFontPadding="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/et_password_login"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#8c8c8c" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="180dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextround"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:includeFontPadding="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#f2f2f2"
                    android:inputType="phone"
                    android:maxLines="1" />

            </LinearLayout>

            <View
                android:id="@+id/view_email"
                android:layout_width="match_parent"
                android:layout_height="40dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view_email"
                android:layout_marginLeft="70dp"
                android:background="@color/white"
                android:backgroundTint="#f2f2f2"

                android:fontFamily="@font/avenir_std"
                android:includeFontPadding="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/phone"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#8c8c8c" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="180dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edittextround"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:includeFontPadding="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/et_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#f2f2f2"
                    android:inputType="date"
                    android:maxLines="1" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/view"
                android:layout_marginLeft="70dp"
                android:background="@color/white"
                android:backgroundTint="#f2f2f2"
                android:fontFamily="@font/avenir_std"
                android:includeFontPadding="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/dob"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#8c8c8c" />


        </RelativeLayout>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_signup"
        android:layout_marginBottom="60dp"
       >


        <RelativeLayout

            android:id="@+id/rl_arrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">


            <ImageView
                android:layout_width="78dp"
                android:layout_height="78dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/circle_login">


            </ImageView>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="90dp"
                android:background="@drawable/circle_login"
                android:src="@drawable/ic_baseline_arrow_forward_24">

            </ImageView>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/avenir_std"
        android:text="@string/already"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <View
        android:layout_width="135dp"
        android:layout_height="5dp"
        android:background="@drawable/line"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

    </View>

</androidx.constraintlayout.widget.ConstraintLayout>